--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
     <section class="container">
       <div class="order">
-        <img src="/images/illustration-hero.svg" alt="Music Hero">
+        <img src="./images/illustration-hero.svg" alt="Music Hero">
         <h1>Order Summary</h1>
         <p>
           You can now listen to millions of songs, audiobooks, and podcasts on any
@@ -20,7 +20,7 @@
         </p>
       </div>
       <div class="price">
-        <img src="/images/icon-music.svg" alt="Song Note">
+        <img src="./images/icon-music.svg" alt="Song Note">
           <ul>
             <li><span>Annual Plan</span> <br>
               $59.99/year</li>
