--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
             <li><a href="#">Change</a></li>
           </ul>
       </div>
-          <button class="pay"><a href="#" target="_blank">Proceed to Payment</a></button>
-          <button class="cancel"><a href="#" target="_blank">Cancel Order</a></button>
+          <div class="submit">
+            <button>Proceed to Payment</button>
+          </div>
+          <div class="cancel">
+            <button>Cancel Order</button>
+          </div>
     </section>
     
     <div class="attribution">
